# minidump

./: .gitignore  CMakeLists.txt  README.md
examples/: comment_api_test.cpp  crash_dump_sample.cpp  gdi_user_handle_alloc_trace.cpp  inproc_heap_fail_test.cpp  inproc_stress_test.cpp  minidump_inspect.cpp  minidumpwritedump_alloc_trace.cpp  prov_csv_to_tree.py  ue4_like_large_app_crash.cpp  windbg_show_overflow_stack.cpp
include/: minidump_inproc.h
src/: minidump_inproc.cpp  minidump_inproc_globals.cpp  minidump_inproc_internal.h  minidump_inproc_memory.cpp  minidump_inproc_modules.cpp  minidump_inproc_streams.cpp  minidump_inproc_threads.cpp  minidump_inproc_util.cpp
